--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
@@ -26,7 +26,7 @@
     <main>
         <div class="d-flex">
             <div class="flex-grow-1 d-flex justify-content-center align-items-center">
-                <iframe name="ContenidoPagina" src="Inicio.cshtml" frameborder="4"></iframe>
+                <iframe name="ContenidoPagina" src="/Portada" frameborder="0"></iframe>
             </div>
 
             <nav class="menu flex-column ml-2">
