--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/wwwroot/css/site.css
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/wwwroot/css/site.css
@@ -40,7 +40,7 @@ iframe {
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
-    color:cornflowerblue;
+    color:#0173D6;
 }
     
 .Logo {
