--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
@@ -40,7 +40,7 @@
         </div>
     </main>
     <footer>
-        <div>22-05-2023 - CIFP César Manrique - Sergio Leal Priere- 2022/2023</div>
+        <div class="texto">22-05-2023 - CIFP César Manrique - Sergio Leal Priere - 2022/2023</div>
     </footer>
 </body>
 </html>
