--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Portada.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Portada.cshtml
@@ -6,6 +6,8 @@
 <html>
 <head>
     <title>Portada</title>
+    <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="~/css/siteportada.css">
 </head>
 <body>
     <header>
