--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio1.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio1.cshtml
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div class="row">
-            <div class="col-md-6 w-25 ">
+            <div class="col-md-6 ">
                 <form class="custom-form m-lg-1" method="post">
                     <fieldset>
                         @if (Request.Method == "POST")
