--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio2.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio2.cshtml
@@ -15,18 +15,18 @@
         <h1>Cuenta palabras</h1>
     </header>
     <main>
-        <div class="row">
-            <div class="col-md-6 w-25 ">
+        <div class="row ">
+            <div class="d-flex justify-content-center">
                 <form class="custom-form m-lg-1" method="post" action="/resultadoEjer2" target="_blank">
                     <fieldset>
                             <div class="mb-3">
                                 <label class="form-label">Frase:</label>
-                                <input type="text" id="frase" name="frase" class="form-control form-control-sm">
+                                <input type="text" id="frase" name="frase" class="form-control form-control-sm" required>
                             </div>
 
                             <div class="mb-3">
                                 <label for="numero2" class="form-label">Palabra:</label>
-                                <input type="text" id="Palabra" name="Palabra" class="form-control form-control-sm">
+                                <input type="text" id="Palabra" name="Palabra" class="form-control form-control-sm" required>
                             </div>
 
                             <button type="submit" class="btn btn-primary btn-sm">Cuenta</button>
