--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/wwwroot/css/site.css
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/wwwroot/css/site.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Font&display=swap');
 
 html {
   font-size: 14px;
@@ -16,12 +18,23 @@ html {
 }
 
 body {
+
 }
 
 header {
     background-image: url("../img/Fondo.png");
     background-size: cover;
     background-position: center;
+}
+
+h1 {
+    font-family: 'Exo 2';
+    font-weight: bold;
+    font-size: 48px;
+    color: #000000;
+    letter-spacing: 2px;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5), 0px 0px 20px rgba(0, 0, 0, 0.5), 0px 0px 30px rgba(0, 0, 0, 0.5), 0px 0px 40px rgba(0, 0, 0, 0.5), 0px 0px 50px rgba(0, 0, 255, 0.8), 0px 0px 70px rgba(0, 0, 255, 0.8), 0px 0px 100px rgba(0, 0, 255, 0.8);
+    opacity: 0.8;
 }
 
 iframe {
@@ -31,6 +44,7 @@ iframe {
 
 .menu {
     margin-top: 100px; 
+
 }
 
 
@@ -62,12 +76,26 @@ iframe {
     }
 
 footer {
-    height:100px;
-    background-image: url("../img/espacio.jpg");
+    height: 100px;
+     background-image: url("../img/espacio.jpg");
     background-size: cover;
     background-position: center;
+    color: white;
+    font-family: 'Space Font';
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
+    footer .texto {
+        font-size: 24px;
+        font-weight: bold;
+        margin: 0;
+    }
 
 
 
