--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio3.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio3.cshtml
@@ -51,7 +51,7 @@
                             {
                                 TimeSpan diferencia = fechaIngresada - fechaHoy;
                                 <div class="resultados">
-                                <p>Días desde la fecha seleccionada hasta hoy: @(Math.Abs(diferencia.Days))</p>
+                                <p>Días desde la fecha seleccionada hasta hoy: @(Math.Abs(diferencia.Days)) días</p>
                                 </div>
                             }
                             else
