--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
@@ -35,6 +35,7 @@
                     <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio1" target="ContenidoPagina">Ejercicio 1</a></li>
                     <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio2" target="ContenidoPagina">Ejercicio 2</a></li>
                     <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio3" target="ContenidoPagina">Ejercicio 3</a></li>
+                    <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio4" target="ContenidoPagina">Ejercicio 4</a></li>
                 </ul>
             </nav>
         </div>
