Ejercicio 4 razor modificado

--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio4.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio4.cshtml
@@ -19,72 +19,6 @@
             <div class="col-md-6">
                 <form class="custom-form m-lg-1" method="post" action="">
                     <fieldset>
-                        @if (Request.Method == "POST")
-                        {
-                            <div class="mb-3">
-                                <div class="row align-items-center">
-                                    <div class="col">
-                                        <label for="numero1" class="form-label">Número 1:</label>
-                                        <input type="number" id="numero1" name="numero1" class="form-control form-control-sm" required value="@Request.Form["numero1"]">
-                                    </div>
-                                    <div class="col">
-                                        <input type="checkbox" id="checkbox1" name="checkbox1" value="" class="form-check form-check-input mt-3">
-                                    </div>
-                                    <div class="col">
-                                        <label for="numero2" class="form-label">Número 2:</label>
-                                        <input type="number" id="numero2" name="numero2" class="form-control form-control-sm" required value="@Request.Form["numero2"]">
-                                    </div>
-                                    <div class="col">
-                                        <input type="checkbox" id="checkbox2" name="checkbox2" value="" class="form-check form-check-input mt-3">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="row align-items-center">
-                                    <div class="col">
-                                        <label for="numero3" class="form-label">Número 3:</label>
-                                        <input type="number" id="numero3" name="numero3" class="form-control form-control-sm" required value="@Request.Form["numero3"]">
-                                    </div>
-                                    <div class="col">
-                                        <input type="checkbox" id="checkbox3" name="checkbox3" value="" class="form-check form-check-input mt-3">
-                                    </div>
-                                    <div class="col">
-                                        <label for="numero4" class="form-label">Número 4:</label>
-                                        <input type="number" id="numero4" name="numero4" class="form-control form-control-sm" required value="@Request.Form["numero4"]">
-                                    </div>
-                                    <div class="col">
-                                        <input type="checkbox" id="checkbox4" name="checkbox4" value="" class="form-check form-check-input mt-3">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="radio" id="suma" name="operacion" value="suma" checked required>
-                                        <label for="suma">Suma</label>
-                                    </div>
-                                    <div class="col">
-                                        <input type="radio" id="multiplicacion" name="operacion" value="multiplicacion" required>
-                                        <label for="multiplicacion">Multiplicación</label>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="row">
-                                    <div class="col">
-                                        <button type="submit" class="btn btn-primary btn-sm">Ejecutar</button>
-                                    </div>
-                                    <div class="col">
-                                        <button type="reset" class="btn btn-primary btn-sm">Limpiar</button>
-                                    </div>
-                                </div>
-                            </div>
-                        }
-                        else
-                        {
                             <div class="mb-3">
                                 <div class="row align-items-center">
                                     <div class="col">
@@ -149,7 +83,6 @@
                                     </div>
                                 </div>
                             </div>
-                        }
                     </fieldset>
                 </form>
             </div>
@@ -157,12 +90,20 @@
                 @{
                     if (Request.Method == "POST")
                     {
-                        int numero1 = 0, numero2 = 0, numero3 = 0, numero4 = 0; ;
+                        int numero1 = 0, numero2 = 0, numero3 = 0, numero4 = 0,suma = 0;
+                        decimal multi = 0;
+                        List<int> numeros = new List<int>();
                         if (Request.Form["eleccion1"] == "on")
                         {
                             if (!int.TryParse(Request.Form["numero1"], out numero1))
                             {
                                 <p>Error no se pudo convertir el número en entero</p>
+
+                            }else
+                            {
+                                numeros.Add(numero1);
+                                suma += numero1;
+                                
                             }
                         }
 
@@ -171,6 +112,11 @@
                             if (!int.TryParse(Request.Form["numero2"], out numero2))
                             {
                                 <p>Error no se pudo convertir el número en entero</p>
+                            }else
+                            {
+                                numeros.Add(numero2);
+                                suma += numero2;
+                                
                             }
                         }
 
@@ -179,6 +125,11 @@
                             if (!int.TryParse(Request.Form["numero3"], out numero3))
                             {
                                 <p>Error no se pudo convertir el número en entero</p>
+                            }else
+                            {
+                                numeros.Add(numero3);
+                                suma += numero3;
+                                
                             }
                         }
 
@@ -187,15 +138,36 @@
                             if (!int.TryParse(Request.Form["numero4"], out numero4))
                             {
                                 <p>Error no se pudo convertir el número en entero</p>
+                            }else
+                            {
+                                numeros.Add(numero4);
+                                suma += numero4;
                             }
                         }
 
                         if (Request.Form["operacion"] == "suma")
                         {
-                            <p>La suma es de: @(numero1+numero2+numero3+numero4)</p>
+                            foreach (int numero in numeros)
+                            {
+                                <div>
+                                <p> Los numeros son:@numero</p>
+                                </div>
+                            }
+                            <p>La suma es de: @suma</p>
+
                         }else
                         {
-                            <p>multiplicacion</p>
+                            multi = numeros[0];
+                        
+                            foreach (int numero in numeros)
+                            {
+                                <div>
+                                    <p> Los numeros son:@numero</p>
+                                </div>
+                                multi *= numero;
+                            }
+                            <p>La multiplicación es de: @multi</p>
+
                         }
 
                         
