Ejercicio 5 terminado razor

--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio4.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Ejercicio4.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Cálculo de días</h1>
+        <h1>Cálculo números</h1>
     </header>
     <main>
         <div class="row">
@@ -168,9 +168,7 @@
                             }
                             <p>La multiplicación es de: @multi</p>
 
-                        }
-
-                        
+                        }  
                     }
              }
     
