ejer - PRO razor Falta 7

--- a/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
+++ b/Ejercicios Programacion/UT07/EJE0701–Razor/EJER/Pages/Inicio.cshtml
@@ -30,13 +30,17 @@
             </div>
 
             <nav class="menu flex-column ml-2">
-                <ul class="nav flex-column ">
-                    <li class="nav-item "><a class="nav-link mb-2" href="/">Principal</a></li>
-                    <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio1" target="ContenidoPagina">Ejercicio 1</a></li>
-                    <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio2" target="ContenidoPagina">Ejercicio 2</a></li>
-                    <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio3" target="ContenidoPagina">Ejercicio 3</a></li>
-                    <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio4" target="ContenidoPagina">Ejercicio 4</a></li>
-                    <li class="nav-item"><a class="nav-link mb-2" href="/Ejercicio5" target="ContenidoPagina">Ejercicio 5</a></li>
+                <ul class="nav flex-column">
+                    <li class="nav-item "><a class="nav-link" href="/">Principal</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio1" target="ContenidoPagina">Ejercicio 1</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio2" target="ContenidoPagina">Ejercicio 2</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio3" target="ContenidoPagina">Ejercicio 3</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio4" target="ContenidoPagina">Ejercicio 4</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio5" target="ContenidoPagina">Ejercicio 5</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio6" target="ContenidoPagina">Ejercicio 6</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio7" target="ContenidoPagina">Ejercicio 7</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Ejercicio8" target="ContenidoPagina">Ejercicio 8</a></li>
+
                 </ul>
             </nav>
         </div>
